Refactor nombres de variables, eliminar exportaciones innecesarias y agregar nuevas traducciones en componentes y archivos de configuración
